--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <title>Zdesk- make a difference</title>
   <base href="/">
+  <meta name="theme-color" content="#673ab7">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">  
+  <link rel="manifest" href="manifest.json">
   
 </head>
 <body>
